--- a/School_Project_BlogPost.html
+++ b/School_Project_BlogPost.html
@@ -6,29 +6,44 @@
 </head>
 <body>
 	<body bgcolor="#fbf7f5"><body background="images/new_candy.jpg">
+		<div class="header"></div>
 <h1 style="font-family: Futura";>My Favorite Foods and Hobbies</h1>
 <span style="font-size: 12pt;"><span style="font-family: Futura;">
+	<div class="content">
+  <div class="side-nav">
+	<ul>
+		<a href="#"><li>Home</li></a>
+		<a href="#"><li>About</li></a>
+		<a href="#"><li>Blog</li></a>
+		<a href="#"><li>Contact</li></a>
+		
+	</ul>
+  </div>
+  <div class="main">
 	<div class="gallery">
-		<img width="400px" height="400px" src="images/makeup1.jpg">
+		<img width="400px" height="400px" src="images/makeup1.jpg">&nbsp;
 		<img width="400px" height="400px" src="images/makeup2.jpg">
 	<br><p>I am obsessed with makeup. When I was young, I would always play witht he different colors and taught myself how to wear makeup after watching a bunch of YouTube tutorials. A lot of my friends and family would ask me to do their makeup for special occassions and I took it as a business and started charging people after I got more clients. I started a social media page and brought in more business. I learned how to do different types of looks from natural to special effects. My favorite holiday is Halloween because I get to get really creative with special effects looks.</p>
 	<p> In 2016, I started a lash business selling false lashes online and in my local city. I talked to a distributor from China and helped custom designed the lashes. I started an Etsy page but my e-commerce business failed miserably. Etsy charged too much for standard shipping and the cost of my lashes were no longer at an "affordable" price because of the high standard shipping even just for one pair of lashes. I ended up sellling more in my local city by advertising on my social media pages. The lashes I had leftover and cannot sell, I used it for my freelance business.</p>
 	<p>Now, I occasionally still freelance here and there but right now I am more focused on becoming a web developer and growing my career. Makeup is a great way for me to hustle and make some extra money, but I don't think it is something I want to do as a career.</p>
-</div>
+</div></div>
 
 <div class="gallery">
 		<img width="400px" height="400px" src="images/pizza.jpg">
 		<img width="400px" height="400px" src="images/ramen.jpg">
 		<img width="400px" height="400px" src="images/sushi.jpg">
-<br><span style="font-size: 12pt;"><span style="font-family: Futura;"><p>I love food. I don't really know if I consider myself a critic but defintiely a foodie because I just love all type of foods. I will go out of my way just to try a new restaurant. My favorite foods are pizza, ramen and sushi. I can eat those three foods everyday if I can, but my health is also really important to me. My friends and I love to try new sushi restaurants because duhh what Asian dosn't like sushi?</p>
+<span style="font-size: 12pt;"><span style="font-family: Futura;"><p>I love food. I don't really know if I consider myself a critic but defintiely a foodie because I just love all type of foods. I will go out of my way just to try a new restaurant. My favorite foods are pizza, ramen and sushi. I can eat those three foods everyday if I can, but my health is also really important to me. My friends and I love to try new sushi restaurants because duhh what Asian dosn't like sushi?</p>
 <p>I have a group of friends where we will try to go a new restaurant every week. We get really excited about new places and yes we ALWAYS snapchat our dishes and share our food. I'm also a very adventurous eater and I think it's because of my Asian heritage but I can eat ANYTHING and will try EVERYTHING... LOL EXCEPT dogs or any of the beautiful animals we call pets. But I can really become the next Anthony Bourdain if given the chance. My goal in life is to travel the world and eat all the foods while getting paid to do so. How awesome is that?</p>
 </span></div>
 <div class="clearfix"></div>
 <div class="columns">
 	<div class="gallery">
-		<img width="400px" height="400px" src="images/gin1.jpg">
-		<img width="400px" height="400px" src="images/gin2.jpg">
+		<img width="400px" height="400px" src="images/gin1.jpg">&nbsp;<br>
+		<img width="400px" height="400px" src="images/gin2.jpg">&nbsp;
 		<span style="font-size: 12pt;"><span style="font-family: Futura;"><p>My favorite drink is gin and tonic. I love gin and whiskey but gin is my favorite. I am not an alcholic. I just enjoy drinking and eating. To me, it is a great way to socialize with people and not about gettinf drunk all the time. I always order a gin and tonic when I'm at a restaurant or bar. My favorite gin is Hendricks. I've tried a lot of different types of gin and Hendricks is by far my favorite. You should try, if you are a gin lover like me.</p></span></div>
+		<div class="footer">
+<p>&copy; Christine Phung </p>
+</div>
 
 </body>
 </html>
