--- a/School_Project_BlogPost.html
+++ b/School_Project_BlogPost.html
@@ -5,7 +5,7 @@
 	<link rel="stylesheet" type="text/css" href="Styles/BlogPost.css">
 </head>
 <body>
-	<body bgcolor="#fbf7f5"><body background="images/new_candy.jpg">
+	<body bgcolor="#fbf7f5"><body background="images/new_donuts.jpg">
 		<div class="header"></div>
 <h1 style="font-family: Futura";>My Favorite Foods and Hobbies</h1>
 <span style="font-size: 12pt;"><span style="font-family: Futura;">
@@ -23,10 +23,10 @@
 	<div class="gallery">
 		<img width="400px" height="400px" src="images/makeup1.jpg">&nbsp;
 		<img width="400px" height="400px" src="images/makeup2.jpg">
-	<br><p>I am obsessed with makeup. When I was young, I would always play witht he different colors and taught myself how to wear makeup after watching a bunch of YouTube tutorials. A lot of my friends and family would ask me to do their makeup for special occassions and I took it as a business and started charging people after I got more clients. I started a social media page and brought in more business. I learned how to do different types of looks from natural to special effects. My favorite holiday is Halloween because I get to get really creative with special effects looks.</p>
+	<div style="background-color:#c#ffffff; text-align:left; vertical-align: middle; padding:20px 47px;"><br><p>I am obsessed with makeup. When I was young, I would always play witht he different colors and taught myself how to wear makeup after watching a bunch of YouTube tutorials. A lot of my friends and family would ask me to do their makeup for special occassions and I took it as a business and started charging people after I got more clients. I started a social media page and brought in more business. I learned how to do different types of looks from natural to special effects. My favorite holiday is Halloween because I get to get really creative with special effects looks.</p>
 	<p> In 2016, I started a lash business selling false lashes online and in my local city. I talked to a distributor from China and helped custom designed the lashes. I started an Etsy page but my e-commerce business failed miserably. Etsy charged too much for standard shipping and the cost of my lashes were no longer at an "affordable" price because of the high standard shipping even just for one pair of lashes. I ended up sellling more in my local city by advertising on my social media pages. The lashes I had leftover and cannot sell, I used it for my freelance business.</p>
 	<p>Now, I occasionally still freelance here and there but right now I am more focused on becoming a web developer and growing my career. Makeup is a great way for me to hustle and make some extra money, but I don't think it is something I want to do as a career.</p>
-</div></div>
+</div></div></div>
 
 <div class="gallery">
 		<img width="400px" height="400px" src="images/pizza.jpg">
